2018-05-16  Antoine Quint  <graouts@apple.com>

        REGRESSION (r230574): Interrupted hardware transitions don't behave correctly
        https://bugs.webkit.org/show_bug.cgi?id=185299
        <rdar://problem/39630230>

        Reviewed by Simon Fraser.

        Add a new test where we interrupt a transition and check that upon returning to the original value,
        an animated value is still used and not the initial value. This test fails prior to this patch.

        * transitions/interrupted-transition-hardware-expected.html: Added.
        * transitions/interrupted-transition-hardware.html: Added.

2018-05-15  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r231765.
        https://bugs.webkit.org/show_bug.cgi?id=185668

        the layout test added with this change is very flaky
        (Requested by realdawei on #webkit).

        Reverted changeset:

        "REGRESSION (r230574): Interrupted hardware transitions don't
        behave correctly"
        https://bugs.webkit.org/show_bug.cgi?id=185299
        https://trac.webkit.org/changeset/231765

2018-05-15  Tadeu Zagallo  <tzagallo@apple.com>

        Update touch event tracking type on every touch
        https://bugs.webkit.org/show_bug.cgi?id=184250
        <rdar://problem/39145092>

        Reviewed by Geoffrey Garen.

        The tracking type for touch events were only update on touchstart, which meant that event
        listeners added after the touchstart would always be treated as passive, even if explicitly
        setting passive to false.

        * fast/events/touch/ios/touchmove-cancelable-after-touchstart-expected.txt: Added.
        * fast/events/touch/ios/touchmove-cancelable-after-touchstart.html: Added.

2018-05-15  Jer Noble  <jer.noble@apple.com>

        Media continues loading after rendered invisible (removed from DOM; scrolled off screen)
        https://bugs.webkit.org/show_bug.cgi?id=185487

        Reviewed by Eric Carlson.
